--- a/catalog.html
+++ b/catalog.html
@@ -28,8 +28,8 @@
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </div>
       <ul class="user-navigation">
-        <li class="login-link"><a href="#"></a>Вход</li>
-        <li class="registration"><a href="#"></a>Регистрация</li>
+        <li class="login-link"><a href="#">Вход</a></li>
+        <li class="registration"><a href="#">Регистрация</a></li>
       </ul>
     </div>
     <nav class="main-navigation">
