--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </div>
       <ul class="user-navigation">
-        <li class="login-link"><a href="#"></a>Вход</li>
-        <li class="registration"><a href="#"></a>Регистрация</li>
+        <li class="login-link"><a href="login.html">Вход</a></li>
+        <li class="registration"><a href="registration.html">Регистрация</a></li>
       </ul>
     </div>
     <nav class="main-navigation">
@@ -69,12 +69,13 @@
       </ul>
       <ul class="catalog-list">
         <li class="catalog-item">
-          <h2>Дрели всем на радость</h2>
-          <a href="#">Элемент каталога 1
-            <img src="img/drill-baner.jpg" alt="Банер">
-          </a>
+          <figure class="galery-content">
+           <h2>Дрели всем на радость</h2>
+           <a href="#"><img src="img/drill-baner.jpg" alt="Элемент каталога 1"></a>
+          </figure>
+          <button class="galery-button-forward" type="button">Вперед</button>
+          <button class="galery-button-backward" type="button">Назад</button>
         </li>
-        <li class="catalog-item"><a href="#">Элемент каталога 2</a></li>
         <li class="catalog-button"><a href="#">Открыть каталог</a></li>
       </ul>
     </section>
