--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
   <header class="main-header">
     <div class="header-top-wrapper">
-      <div class="container-a">
+      <div class="container container-flex">
         <div class="header-logo">
-          <a href="#"><img src="img/index-logo.png" width="220px" height="47px" alt="Техномарт"></a>
+          <a href="#">Техномарт</a>
         </div>
         <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
           <p>
-            <label class="search-form-label" for="search">Поиск</label>
+            <label class="search-form-label visually-hidden" for="search">Поиск</label>
             <button class="search-button" type="submit" name="button"></button>
             <input class="form" id="search" type="search" placeholder="Поиск">
           </p>
@@ -30,8 +30,8 @@
         </ul>
       </div>
     </div>
-    <div class="container-b">
-      <div class="header-middle-wrapper">
+    <div class="header-middle-wrapper">
+      <div class="container container-flex">
         <h1 class="site-label">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
         <address class="header-address">
           <p class="phone">+7 (812) 555-05-55</p>
@@ -42,18 +42,17 @@
           <li class="registration"><a href="registration.html">Регистрация</a></li>
         </ul>
       </div>
-    </div>
-    <nav class="main-navigation">
-      <ul class="site-navigation">
-        <li><a href="#">Главная</a></li>
-        <li><a href="about-us.html">Компания</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="news.html">Новости</a></li>
-        <li><a href="price.html">Спецпредложения</a></li>
-        <li><a href="catalog.html">Доставка</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-      </ul>
-    </nav>
+      <nav class="main-navigation">
+        <ul class="site-navigation">
+          <li><a href="#">Главная</a></li>
+          <li><a href="about-us.html">Компания</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="news.html">Новости</a></li>
+          <li><a href="price.html">Спецпредложения</a></li>
+          <li><a href="catalog.html">Доставка</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
 
@@ -190,82 +189,93 @@
       </div>
     </section>
     <section>
-      <div class="about us">
-        <h4>КОМПАНИЯ «Техномарт»</h4>
-        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-        <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
-        <ul class="transport">
-          <li>Деловые линии</li>
-          <li>Автотрейдинг</li>
-          <li>ЖелДорЭкспедиция</li>
-          <li><a href="#">Подробнее о компании</a></li>
-        </ul>
+      <div class="container container-flex">
+        <div class="about-us">
+          <h4 class="about-us-label">КОМПАНИЯ «Техномарт»</h4>
+          <div class="paragraph-left">
+            <p class="paragraph-1">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+            <p class="paragraph-2">Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
+          </div>
+          <ul class="delivers-list">
+            <li class="delivers-list-item">Деловые линии</li>
+            <li class="delivers-list-item">Автотрейдинг</li>
+            <li class="delivers-list-item">ЖелДорЭкспедиция</li>
+          </ul>
+          <a class="about-us-link" href="#">Подробнее о компании</a></li>
+        </div>
+        <div class="contacts">
+          <div class="paragraph-right">
+            <h4 class="contacts-label">Контакты</h4>
+            <p class="paragraph-3">Вы можете забрать товар сами, заехав в наш офис:</p>
+          </div>
+          <img class="map" src="img/map.png" width: "300px" height: "158px" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+          <a class="write-us-link" href="#">Заблудились? Напишите нам!</a>
+        </div>
       </div>
-      <div class="contacts">
-        <h4>Контакты</h4>
-        <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-        <img src="img/map.png" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
-        <a href="#">Заблудились? Напишите нам!</a>
-      </div>
+
     </section>
   </main>
 
-  <footer>
-    <div class="footer-logo">
-      <a href="#"><img src="img/fotter-logo.png" width="220px" height="68px" alt="Техномарт"></a>
-      <ul class="footer-navigation-list">
-        <li class="footer-navigation-item"><a href="#">Компания</a></li>
-        <li class="footer-navigation-item"><a href="#">Новости</a></li>
-        <li class="footer-navigation-item"><a href="#">Каталог</a></li>
-        <li class="footer-navigation-item"><a href="#">Доставка</a></li>
-        <li class="footer-navigation-item"><a href="#">Контакты</a></li>
-      </ul>
-    </div>
-    <div class="footer-contacts">
-      <address class="footer-address">
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8 <br>+7 (812) 555-05-55</p>
-      </address>
-      <ul class="footer-category-list">
-        <li class="footer-category-item"><a href="#">Материалы</a></li>
-        <li class="footer-category-item"><a href="#">Техника</a></li>
-        <li class="footer-category-item"><a href="#">Инструмент</a></li>
-        <li class="footer-category-item"><a href="#">Спецпредложения</a></li>
-      </ul>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-logo">
+        <div class="logo"></div>
+        <ul class="footer-navigation-list">
+          <li class="footer-navigation-item"><a href="#">Компания</a></li>
+          <li class="footer-navigation-item"><a href="#">Новости</a></li>
+          <li class="footer-navigation-item"><a href="#">Каталог</a></li>
+          <li class="footer-navigation-item"><a href="#">Доставка</a></li>
+          <li class="footer-navigation-item"><a href="#">Контакты</a></li>
+        </ul>
+      </div>
+      <div class="footer-contacts">
+        <address class="footer-address">
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8<br>+7 (812) 555-05-55</p>
+        </address>
+        <ul class="footer-category-list">
+          <li class="footer-category-item"><a href="#">Материалы</a></li>
+          <li class="footer-category-item"><a href="#">Техника</a></li>
+          <li class="footer-category-item"><a href="#">Инструмент</a></li>
+          <li class="footer-category-item"><a href="#">Спецпредложения</a></li>
+        </ul>
+      </div>
     </div>
     <div class="copyright">
-      <p>© 2010–2019 Компания «Техномарт» <br> Все права защищены</p>
-      <ul class="social-list">
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фэйсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
-      </ul>
-      <div class="site-information">
-        <p>Обратная связь:<br>
-          <a class="feedback" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-        </p>
-        <p>Разработано -<br>
-          <a class="create" href="https://htmlacademy.ru">htmlacademy.ru</a>
-        </p>
+      <div class="container container-flex">
+        <p>© 2010–2019 Компания «Техномарт» <br> Все права защищены</p>
+        <ul class="social-list">
+          <li><a class="vk" href="#">Вконтакте</a></li>
+          <li><a class="fb" href="#">Фэйсбук</a></li>
+          <li><a class="inst" href="#">Инстаграм</a></li>
+        </ul>
+        <div class="site-information">
+          <p>Обратная связь:<br>
+            <a class="feedback" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+          </p>
+          <p>Разработано -<br>
+            <a class="create" href="https://htmlacademy.ru">htmlacademy.ru</a>
+          </p>
+        </div>
       </div>
     </div>
   </footer>
 
   <div class="modal-contacts-popup">
-    <form class="write-us" action="https://echo.htmlacademy.ru" method="post">
-      <p>
-        <label for="your-name">Ваше имя</label>
-        <input id="your-name" type="text" name="name" placeholder="Имя фамилия">
-      </p>
-      <p>
-        <label for="your-email">Ваш e-mail</label>
-        <input id="your-email" type="email" name="email" placeholder="email@example.ru">
-      </p>
-      <p>
-        <label for="text">Текст письма:</label>
-        <input id="text" type="text" name="next" placeholder="В свободной форме">
-      </p>
-      <button type="submit">Отправить</button>
-    </form>
+      <form class="write-us" action="https://echo.htmlacademy.ru" method="post">
+        <div class="first-line">
+          <label for="your-name">Ваше имя</label>
+          <input id="your-name" type="text" name="name" placeholder="Имя фамилия">
+        </div>
+        <div class="second-line">
+          <label for="your-email">Ваш e-mail</label>
+          <input id="your-email" type="email" name="email" placeholder="email@example.ru">
+        </div>
+        <div class="third-line">
+          <label for="text">Текст письма:</label>
+          <input id="text" type="text" name="next" placeholder="В свободной форме">
+        </div>
+        <button class="popup-button" type="submit">Отправить</button>
+      </form>
   </div>
 
 </body>
