--- a/catalog.html
+++ b/catalog.html
@@ -162,13 +162,13 @@
             <li class="sort-parametres-item-type"><a href="#">По типу</a></li>
             <li class="sort-parametres-item-function"><a href="#">По функционалу</a></li>
             <li class="sort-parametres-item-up">
-              <a href="#">
+              <a class="up-link" href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
                   <path d="M5.5 0L0 10h11z" /></svg>
               </a>
             </li>
             <li class="sort-parametres-item-down">
-              <a href="#">
+              <a class="down-link" href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
                   <path d="M5.5 10L0 0h11" /></svg>
               </a>
